# quoridor-server

./: .env  Cargo.toml  README.md  quoridor.db-shm  quoridor.db-wal
.devcontainer/: Containerfile  devcontainer.json
.sqlx/: query-02669562f585ce523c789e673c91a36d4e23000357f28cc19732f0e782250eca.json  query-03ef10d461ccab142aae42bcd2e2726c1e2f91e2f27fdbe8b7caf6f14fc77e84.json  query-1fa1cd170e3e6fc3cb9b4ab0693e75a48848fa8995f05a3f88848bf71786777a.json  query-52f44828aa1087944a9310c3f3914ec50b44e6c96f6806a846f02317d4eacf74.json  query-693d89315ff3543e2b36ac667a7f12900f86ce3afbd5f10bda3e206a719e7eb6.json  query-6e934558ba9e52095d91cabc66301595ea8940259fe414740959d7b94c0caecd.json  query-743a92ee283a9f48ad09598d03122b8baaf5dc528f962128580e02318df5a28b.json  query-7bfc7f6206900c24d59d05d7ae715dd2cbab6baacbd15bb5872a0fce48efb5f5.json  query-7f3a7a2e3bc9576785bd2b1766501d463fef983c87d670ae7eb6f3de2b51b4ff.json  query-9737e981d19ae7711772e0cc5f193976890cfbd8c60cd232fc23c83cfaf911de.json  query-ac495d56e1a588e47dfde5ad82cf44669f40748c728021ab608a97c6594699e5.json  query-c236ef44c4bf34fc3e7a97074d57ef15d9c0a6c19becb7114a615095a672feb8.json  query-d034a1709becfba5c16e9a5dbf8c36d1904a0fb261d209380987d942f746d1c0.json
documentation/: datamodel.md
migrations/: 0001_create_user_table.sql
src/: config.rs  main.rs
src/db/: mod.rs  user.rs
src/handlers/: auth.rs
src/models/: mod.rs  user.rs
src/routes/: auth.rs  mod.rs  user.rs
src/services/: auth.rs  mod.rs  user.rs
src/utils/: email.rs  errors.rs  hashing.rs  init.rs  jwt.rs  mod.rs
tests/: quick-dev.rs
