[package]
name = "quoridor-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7.3" # Latest stable version as of October 2023

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Database
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }

# Serialization/deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Password hashing
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }

# Email
lettre = { version = "0.11.0", features = ["builder", "tokio1-native-tls"] }

# Environment variables
dotenv = "0.15.0"

# Error handling
anyhow = "1.0.75"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter","std","registry"] }

# JWT
jsonwebtoken = "9.2.0" # Latest stable version as of October 2023
chrono = { version = "0.4.40", features = ["serde"] }


# UUID
uuid = { version = "1.4.1", features = ["v4"] }

# Validation
validator = { version = "0.16.1", features = ["derive"] }
rand = "0.9.0"

regex = "1.10.2" # Latest stable version as of now

# Testing
httpc-test = "0.1.10"